# InferTwin-

./: .gitignore  README.md  pyproject.toml
configs/backends/: external_tools.yaml  ramulator2_template.yaml
configs/deployments/: glm-v5.1-vllm-ascend-prefill-pooling.yaml  glm-v5.1-vllm-ascend-prefill.yaml
configs/experiments/: default.yaml  future_hit_floor_template.yaml  step5_hbm_lru.yaml  step6_capacity_sweep.yaml  step7_streaming_hbm_ddr_sweep.yaml  streaming_capacity_sweep_instance_latency.yaml
configs/hardware/: ascend-a3-example.yaml  example_hardware.yaml
configs/instances/: local-fixed-route-example.yaml  local-fixed-route-latency-example.yaml
configs/models/: example_model.yaml  glm-v5.1.yaml  glm-v5.yaml  registry.yaml  registry_step7_pooling.yaml
data/samples/: sample_trace.csv  step7_pooling_trace.csv
docs/: agent_development_context.md  code_development_requirements.md  core_simulator_technical_plan.md  development_governance.md  global_memory.md  hitfloor_product_design.md  infertwin_product_design.md
docs/V1/: infertwin_v1_acceptance.md  infertwin_v1_error_analysis.md  infertwin_v1_handoff.md  infertwin_v1_vs_real_serving_comparison.md
docs/archive/: development_status.md  future_simulation_extensions.md  implementation_plan.md  pre_step6_cleanup_plan.md
docs/hitfloor/: README.md
docs/notes/: aiconfigurator_manual.md  cached_tokens_calculation_logic.md  (+3 more)
scripts/: benchmark_replay.py  benchmark_streaming_replay.py  normalize_unrouted_trace.py  run_capacity_sweep.py  run_simulation.py  validate_trace.py
tokenizers/: README.md
(+335 files in other folders)
